--- a/HTML_CSS/produtos.css
+++ b/HTML_CSS/produtos.css
@@ -38,6 +38,9 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
 }
 
 .produtos h2 {
@@ -48,6 +51,8 @@ nav a {
 .produto-preco {
     font-size: 22px;
     font-weight: bold;
+    margin: 10px 0 0;
+    margin-top: 10px;
 }
 .produto-descricao {
     font-size: 18px;
