--- a/HTML_CSS/produtos.css
+++ b/HTML_CSS/produtos.css
@@ -74,3 +74,9 @@ nav a:hover {
 .produto-descricao {
     font-size: 18px;
 }
+
+footer {
+    text-align: center;
+    background: url("bg.jpeg");
+    padding: 40px 0;
+}
