--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -77,7 +77,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background: url("bg.jpeg");
+    background: url("bg.jpg");
     padding: 40px 0;
 }
 
