Opacidade nos elementos

--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -158,6 +158,7 @@ td, th {
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+    color: rgba(0,0,0,0.3);
 }
 
 .principal {
@@ -227,8 +228,14 @@ td, th {
     content: "★ ";
 }
 
-.imagembeneficios {
+.imagem-beneficios {
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.3;
 }
 
 .video {
