Sombra nos elementos

--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -158,7 +158,7 @@ td, th {
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
-    color: rgba(0,0,0,0.3);
+    /*text-shadow: 2px 2px 5px red;*/
 }
 
 .principal {
@@ -232,6 +232,8 @@ td, th {
     width: 60%;
     opacity: 1;
     transition: 400ms;
+    /*box-shadow eixo X eixo Y degradê intensidade cor*/
+    box-shadow: 10px 10px 10px #000000;
 }
 
 .imagem-beneficios:hover {
