--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -247,7 +247,21 @@ td, th {
 
 @media screen and (max-width: 480px) {
     body {
-        /*background: red;*/
-        
+        /*background: red;*/        
+    }
+    .caixa, .principal, .conteudo, .beneficios, .mapa-conteudo, .video{
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
     }
 }
