--- a/HTML_CSS/Flex Grid e Main/assets/css/style.css
+++ b/HTML_CSS/Flex Grid e Main/assets/css/style.css
@@ -31,3 +31,59 @@ body {
 .cabecalho_logo {
     width: 40px;
 }
+
+.menu-lateral {
+    display: flex;
+    flex-direction: column;
+    background-color: #15191C;
+    width: 75vw;
+    height: 100vh;
+}
+
+.menu-lateral_logo {
+    width: 118px;
+    align-self: center;
+    padding: 16px;
+}
+
+.menu-lateral_link {
+    height: 64px;
+    color: #95999C;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-lateral_link--ativo {
+    color: #FFFFFF;
+    padding-left: 56px;
+    border-left: 8px solid #FFFFFF;
+}
+
+.menu-lateral_link::before {
+    content: "\e900";
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
+}
+
+.menu-lateral_link--inicio::before {
+    content: "\e902";
+}
+.menu-lateral_link--videos::before {
+    content: "\e90e";
+}
+.menu-lateral_link--picos::before {
+    content: "\e909";
+}
+.menu-lateral_link--integrantes::before {
+    content: "\e903";
+}
+.menu-lateral_link--camisas::before {
+    content: "\e900";
+}
+.menu-lateral_link--pinturas::before {
+    content: "\e90a";
+}
