--- a/HTML_CSS/Flex Grid e Main/assets/css/style.css
+++ b/HTML_CSS/Flex Grid e Main/assets/css/style.css
@@ -116,7 +116,8 @@ body {
 .cartao_conteudo {
     padding: 16px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
     /*grid-template-rows: 300px;*/
 }
 
