Terminando o layout da página

--- a/HTML_CSS/Flex Grid e Main/assets/css/style.css
+++ b/HTML_CSS/Flex Grid e Main/assets/css/style.css
@@ -99,10 +99,17 @@ body {
 
 .principal {
     padding: 24px 16px;
+    display: grid;
+    gap: 16px;
 }
 
 .titulo-pagina {
     font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.titulo-secao {
+    font-size: 1.2rem;
     font-weight: 700;
 }
 
@@ -111,6 +118,9 @@ body {
     border-radius: 15px;
     overflow: hidden;
     background: #2c343a;
+}
+.cartao--destaque {
+    margin-bottom: 16px;
 }
 
 .cartao_conteudo {
@@ -162,6 +172,7 @@ body {
     height: 40px;
     border-radius: 10px;
     font-size: 0.9rem;
+    justify-self: flex-end;
 }
 
 .cartao_botao--play::before {
@@ -177,4 +188,10 @@ body {
 .cartao_botao--destaque::before{
     margin-right: 8px;
 }
+
+.secao {
+    display: grid;
+    gap: 16px;
+}
+
 
