--- a/HTML_CSS/Flex Grid e Main/assets/css/estilos.css
+++ b/HTML_CSS/Flex Grid e Main/assets/css/estilos.css
@@ -5,14 +5,14 @@
 
 body {
     background-color: #1D232A;
-    font-family: 'Opens Sans', 'icones', sans-serif;
+    font-family: 'Open Sans', 'icones', sans-serif;
     color: #FFFFFF;
 }
 
 @media screen and (min-width: 1440px) {
     body {
         display: grid;
-        grid-template-columns: auto 1fr;        
+        grid-template-columns: auto 1fr;
     }
 }
 
@@ -25,43 +25,45 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
-.cabecalho_menu i::before {
+.cabecalho__menu i::before {
     content: "\e904";
     font-size: 24px;
 }
 
-.cabecalho_notificacao i::before {
+.cabecalho__notificacao i::before {
     content: "\e906";
     font-size: 24px;
 }
 
-.cabecalho_logo {
+.cabecalho__logo {
     width: 40px;
 }
 
-.cabecalho_perfil {
+.cabecalho__perfil {
     display: none;
 }
 
 @media screen and (min-width: 1440px) {
     .cabecalho {
-        background-color: #1D232A; 
+        background-color: #1D232A;
         display: grid;
         column-gap: 32px;
         grid-template-columns: 1fr auto;
         padding: 16px 60px;
         height: 80px;
         box-sizing: border-box;
+        grid-column: 2;
     }
 
-    .cabecalho_menu {
+    .cabecalho__menu {
         display: none;
     }
 
-    .cabecalho_logo {
+    .cabecalho__logo {
         display: none;
     }
-    .cabecalho_perfil {
+
+    .cabecalho__perfil {
         display: grid;
         grid-template-columns: repeat(3, auto);
         column-gap: 8px;
@@ -69,20 +71,21 @@ body {
         justify-self: flex-end;
         color: #95999C;
         padding: 8px 32px;
-        border-right: 1px solid #95999c;
+        border-right: 1px solid #95999C;
     }
 
-    .cabecalho_pefil::before {
+    .cabecalho__perfil::before {
         content: "";
         display: block;
         width: 32px;
         height: 32px;
-        background-image: url(../img/produto_2.png);
+        background-image: url(../img/profile_2.png);
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
     }
 
-    .cabecalho_perfil::after {
+    .cabecalho__perfil::after {
         content: "\e90d";
         color: #FFFFFF;
         font-size: 1.5rem;
@@ -95,9 +98,10 @@ body {
     background-color: #15191C;
     width: 75vw;
     height: 100vh;
+
     position: absolute;
-    left: -1000vh;
-    transition: .80s;
+    left: -100vw;
+    transition: .25s;
 }
 
 .menu-lateral--ativo {
@@ -105,13 +109,13 @@ body {
     transition: .25s;
 }
 
-.menu-lateral_logo {
+.menu-lateral__logo {
     width: 118px;
     align-self: center;
     padding: 16px;
 }
 
-.menu-lateral_link {
+.menu-lateral__link {
     height: 64px;
     color: #95999C;
     padding-left: 64px;
@@ -119,13 +123,13 @@ body {
     align-items: center;
 }
 
-.menu-lateral_link--ativo {
+.menu-lateral__link--ativo {
     color: #FFFFFF;
     padding-left: 56px;
     border-left: 8px solid #FFFFFF;
 }
 
-.menu-lateral_link::before {
+.menu-lateral__link::before {
     content: "\e900";
     width: 24px;
     height: 24px;
@@ -134,29 +138,36 @@ body {
     left: 24px;
 }
 
-.menu-lateral_link--inicio::before {
+.menu-lateral__link--inicio::before {
     content: "\e902";
 }
-.menu-lateral_link--videos::before {
+
+.menu-lateral__link--videos::before {
     content: "\e90e";
 }
-.menu-lateral_link--picos::before {
+
+.menu-lateral__link--picos::before {
     content: "\e909";
 }
-.menu-lateral_link--integrantes::before {
+
+.menu-lateral__link--integrantes::before {
     content: "\e903";
 }
-.menu-lateral_link--camisas::before {
+
+.menu-lateral__link--camisas::before {
     content: "\e900";
 }
-.menu-lateral_link--pinturas::before {
+
+.menu-lateral__link--pinturas::before {
     content: "\e90a";
 }
 
 @media screen and (min-width: 1440px) {
-    .manu-lateral {
+    .menu-lateral {
         position: static;
         width: 200px;
+        grid-column: 1;
+        grid-row: 1 / span 2;
     }
 }
 
@@ -182,60 +193,61 @@ body {
         grid-template-columns: auto 1fr auto;
         column-gap: 32px;
         padding: 16px 60px;
-    }   
+        grid-column: 2;
+    }
 }
 
 .cartao {
     width: 100%;
     border-radius: 15px;
     overflow: hidden;
-    background: #2c343a;
+    background-color: #2C343A;
 }
+
 .cartao--destaque {
     margin-bottom: 16px;
 }
 
-.cartao_conteudo {
+.cartao__conteudo {
     padding: 16px;
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 8px;
-    /*grid-template-rows: 300px;*/
 }
 
-.cartao_destaque {
+.cartao__destaque {
     grid-column: span 2;
 }
 
-.cartao_titulo {
+.cartao__titulo {
     font-size: 1.2rem;
     font-weight: 700;
     grid-column: span 2;
 }
 
-.cartao_perfil {
+.cartao__perfil {
     color: #95999C;
     font-size: 0.9rem;
     grid-column: span 2;
 }
 
-.cartao_info {
+.cartao__info {
     display: flex;
     align-items: center;
     color: #95999C;
 }
 
-.cartao_info--tempo::before {
+.cartao__info--tempo::before {
     content: "\e90c";
-    margin-right: 8px;
+    margin-right: 8px;    
 }
 
-.cartao_info--visualizacao::before {
+.cartao__info--visualizacao::before {
     content: "\e90f";
-    margin-right: 8px;
+    margin-right: 8px;    
 }
 
-.cartao_botao {
+.cartao__botao {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -247,17 +259,17 @@ body {
     justify-self: flex-end;
 }
 
-.cartao_botao--play::before {
+.cartao__botao--play::before {
     content: "\e90b";
     font-size: 24px;
 }
 
-.cartao_botao--destaque {
+.cartao__botao--destaque {
     width: 100%;
     grid-column: span 2;
 }
 
-.cartao_botao--destaque::before{
+.cartao__botao--destaque::before {
     margin-right: 8px;
 }
 
@@ -268,19 +280,55 @@ body {
 @media screen and (min-width: 1440px) {
     .cartao--recentes {
         display: grid;
-        grid-template-columns: repeat(2, auto);
+        grid-template-columns: auto auto;
         align-items: center;
         row-gap: 24px;
         width: 256px;
         padding: 16px;
         box-sizing: border-box;
     }
+
+    .cartao--recentes .cartao__titulo {
+        grid-column: auto;
+    }
+
+    .cartao__link {
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: #0480DC;
+        justify-self: flex-end;
+    }
     
+    .cartao__lista {
+        display: grid;
+        row-gap: 16px;
+        grid-column: span 2;
+    }
+
+    .cartao__item {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 8px;
+    }
+
+    .cartao__item-thumbnail {
+        width: 32px;
+        grid-row: span 2;
+    }
+
+    .cartao__item-titulo {
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+        font-weight: 700;
+    }
+
+    .cartao__item-perfil {
+        font-size: 0.8rem;
+        color: #95999C;
+    }
 }
 
 .secao {
     display: grid;
     gap: 16px;
 }
-
-
