--- a/HTML_CSS/Alura-Plus/style.css
+++ b/HTML_CSS/Alura-Plus/style.css
@@ -24,6 +24,7 @@ body {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
 }
 
 .container {
@@ -63,4 +64,12 @@ body {
 
 .container__caixa {
     margin: 0 6em;
+}
+
+.secundario__imagem {
+    width: 80%;
+}
+
+.secundario {
+    align-items: center;
 }
