--- a/HTML_CSS/AluraBooks/styles/header.css
+++ b/HTML_CSS/AluraBooks/styles/header.css
@@ -46,9 +46,9 @@
 }
 
 .lista-menu__link {
-    background: var(--azul-degrade);
+    background: var(--azul-degrade); 
     -webkit-background-clip: text;
-    /*-webkit-text-fill-color: transparent;*/
+    -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
 }
