--- a/HTML_CSS/AluraBooks/styles/header.css
+++ b/HTML_CSS/AluraBooks/styles/header.css
@@ -99,5 +99,14 @@
     .cabecalho__menu-hamburguer {
         display: none;
     }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: auto;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
 }
 
