--- a/DJANGO/alura-space/templates/galeria/base.html
+++ b/DJANGO/alura-space/templates/galeria/base.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="{% static '/styles/style.css' %}">
 </head>
 <body>
+    {% include 'galeria/partials/_menu_lateral.html' %}
     {% block content %}{% endblock %}
+    
+    {% include 'galeria/partials/_footer.html' %}    
 </body>
 </html>
