--- a/DJANGO/alura-space/templates/galeria/index.html
+++ b/DJANGO/alura-space/templates/galeria/index.html
@@ -23,8 +23,8 @@
                             {% if cards %}
                             {% for fotografia in cards %}
                             <li class="card">
-                                <a href="{% url 'imagem' %}">
-                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}" alt="foto">
+                                <a href="{% url 'imagem' fotografia.id %}">
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto}}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
