--- a/DJANGO/alura-space/templates/galeria/index.html
+++ b/DJANGO/alura-space/templates/galeria/index.html
@@ -1,5 +1,5 @@
 
-{% extends 'galeria/base.html' %}
+{% extends 'shared/base.html' %}
 {% load static %}
 {% block content %}
             <section class="conteudo">
