--- a/DJANGO/alura-space/templates/galeria/nova_imagem.html
+++ b/DJANGO/alura-space/templates/galeria/nova_imagem.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
             <section class="galeria" style="margin-left: 5em">
-                <form action="{% url 'login' %}" method="POST">
+                <form action="{% url 'nova_imagem' %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
                         {% for field in form.visible_fields %}
