--- a/FLASK/Jogoteca/templates/editar.html
+++ b/FLASK/Jogoteca/templates/editar.html
@@ -4,15 +4,15 @@
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control">
+            <input type="text" id="nome" name="nome" class="form-control" value="{{ jogo.nome }}">
           </div>
           <div class="form-group">
             <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control">
+            <input type="text" id="categoria" name="categoria" class="form-control" value="{{ jogo.categoria }}">
           </div>
           <div class="form-group">
             <label for="console">Console</label>
-            <input type="text" id="console" name="console" class="form-control">
+            <input type="text" id="console" name="console" class="form-control" value="{{ jogo.console }}">
           </div>
           <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
         </fieldset>
