--- a/CHAT_GPT_Produtividade/css/cabecalho.css
+++ b/CHAT_GPT_Produtividade/css/cabecalho.css
@@ -142,6 +142,22 @@
   background-color: var(--cinza-claro);
 }
 
+body.modo-escuro .cabecalho__videos {
+  background-image: url("../img/modo_escuro/menu_superior/video_call.svg");
+}
+
+body.modo-escuro .cabecalho__notificacoes {
+  background-image: url("../img/modo_escuro/menu_superior/notifications.svg");
+}
+
+body.modo-escuro .cabecalho__apps {
+  background-image: url("../img/modo_escuro/menu_superior/apps.svg");
+}
+
+.modo-escuro .cabecalho__avatar {
+  background-image: url("../img/modo_escuro/menu_superior/Avatar.png");
+}
+
 @media (min-width: 1156px) {
   .cabecalho__pesquisa-container {
     display: block;
